# yaml2cmd

./: .flake8  LICENSE  README.md  setup.cfg  setup.py
examples/: rocker.yaml
src/yaml2cmd/: yaml2cmd.py
src/yaml2cmd.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_process_arguments.py
