[metadata]
name = yaml2cmd
version = 0.0.1
author = Felipe Padula Sanches
author_email = fpadula92@gmail.com
description = Parses yaml files to generate (usually long) shell commands
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fpadula/yaml2cmd
project_urls =
    Bug Tracker = https://github.com/fpadula/yaml2cmd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    yaml2cmd = yaml2cmd.yaml2cmd:main
